# slack-summarize-bot

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
